--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+%dev.quarkus.oidc.auth-server-url=https://gwt-test.auth.eu-west-1.amazoncognito.com
+%dev.quarkus.oidc.client-id=5kpjjhqbnjmr5bm8bnsfjqmq13
+%dev.quarkus.oidc.credentials.client-secret.value=19oh5q174jdlsed3krnb60dhsdopsftrc5j1ltsc76qo7gilgne1
+%dev.quarkus.oidc.authentication.scopes=openid
+
 %dev.quarkus.http.port=8181
