--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+quarkus.dynamodb.sync-client.type=apache
+
 %dev.quarkus.oidc.auth-server-url=https://gwt-test.auth.eu-west-1.amazoncognito.com
 %dev.quarkus.oidc.client-id=5kpjjhqbnjmr5bm8bnsfjqmq13
 %dev.quarkus.oidc.credentials.client-secret.value=19oh5q174jdlsed3krnb60dhsdopsftrc5j1ltsc76qo7gilgne1
