--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.log.level=INFO
+quarkus.log.level=DEBUG
 %dev.quarkus.log.category."com.wetjens.gwt".level=DEBUG
 
 quarkus.dynamodb.sync-client.type=apache
