--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.log.level=DEBUG
+quarkus.log.level=INFO
 %dev.quarkus.log.category."com.wetjens.gwt".level=DEBUG
 
 quarkus.dynamodb.sync-client.type=apache
@@ -6,9 +6,11 @@ quarkus.dynamodb.sync-client.type=apache
 quarkus.oidc.roles.role-claim-path=cognito:groups
 quarkus.oidc.authentication.scopes=openid
 
+quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_c5qwAzc0x
+quarkus.oidc.client-id=39334dh8ifidq5dpmnch2vnopr
+
 %dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_s6Ypfd935
 %dev.quarkus.oidc.client-id=5kpjjhqbnjmr5bm8bnsfjqmq13
-%dev.quarkus.oidc.credentials.client-secret.value=19oh5q174jdlsed3krnb60dhsdopsftrc5j1ltsc76qo7gilgne1
 
 %dev.quarkus.http.port=8181
 
