add health endpoint. port 8080

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -69,10 +69,14 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-oidc</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>io.quarkus</groupId>-->
-<!--            <artifactId>quarkus-undertow-websockets</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-health</artifactId>
+        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>io.quarkus</groupId>-->
+        <!--            <artifactId>quarkus-undertow-websockets</artifactId>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>io.quarkus</groupId>
