--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,3 +13,8 @@ quarkus.oidc.client-id=39334dh8ifidq5dpmnch2vnopr
 %dev.quarkus.oidc.client-id=5kpjjhqbnjmr5bm8bnsfjqmq13
 
 %dev.gwt.dynamodb.tableSuffix=-test
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=https://gwt.wetjens.com
+
+%dev.quarkus.http.cors=false
