--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -16,5 +16,6 @@ quarkus.oidc.client-id=39334dh8ifidq5dpmnch2vnopr
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=https://gwt.wetjens.com
-
-%dev.quarkus.http.cors=false
+%dev.quarkus.http.cors.origins=http://localhost:4200
+quarkus.http.cors.headers=Accept,Authorization,Content-Type
+quarkus.http.cors.methods=GET,POST
