--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -12,8 +12,8 @@ quarkus.oidc.client-id=39334dh8ifidq5dpmnch2vnopr
 %dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_s6Ypfd935
 %dev.quarkus.oidc.client-id=5kpjjhqbnjmr5bm8bnsfjqmq13
 
-gwt.dynamodb.tableSuffix=
-%dev.gwt.dynamodb.tableSuffix=-test
+gwt.dynamodb.table-suffix=
+%dev.gwt.dynamodb.table-suffix=-test
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=https://gwt.wetjens.com
