--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,7 +13,7 @@ quarkus.oidc.client-id=39334dh8ifidq5dpmnch2vnopr
 %dev.quarkus.oidc.client-id=5kpjjhqbnjmr5bm8bnsfjqmq13
 
 gwt.dynamodb.table-suffix=
-#%dev.gwt.dynamodb.table-suffix=-test
+%dev.gwt.dynamodb.table-suffix=-test
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=https://gwt.wetjens.com
