--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,10 +6,9 @@
         <artifactId>gwt</artifactId>
         <groupId>com.wetjens.gwt</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>core</artifactId>
-
-
 </project>
