--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 quarkus.log.level=INFO
 %dev.quarkus.log.category."com.wetjens.gwt".level=DEBUG
+#%dev.quarkus.log.category."io.quarkus.narayana".level=TRACE
+#%dev.quarkus.log.category."com.arjuna.ats.jta".level=TRACE
 
 quarkus.dynamodb.sync-client.type=apache
 
@@ -14,6 +16,9 @@ quarkus.oidc.client-id=39334dh8ifidq5dpmnch2vnopr
 
 gwt.dynamodb.table-suffix=
 %dev.gwt.dynamodb.table-suffix=-test
+
+gwt.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/gwt-events
+%dev.gwt.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/gwt-events-test
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=https://gwt.wetjens.com
