update cors filter

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -21,7 +21,7 @@ gwt.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/gwt-events
 %dev.gwt.sqs.queue-url=https://sqs.eu-west-1.amazonaws.com/598172618529/gwt-events-test
 
 quarkus.http.cors=true
-quarkus.http.cors.origins=https://gwt.wetjens.com
+quarkus.http.cors.origins=https://tomsboardgames.com,https://www.tomsboardgames.com
 %dev.quarkus.http.cors.origins=http://localhost:4200
 quarkus.http.cors.headers=Accept,Authorization,Content-Type
 quarkus.http.cors.methods=GET,POST
