--- a/server/pom.xml
+++ b/server/pom.xml
@@ -19,6 +19,7 @@
         <quarkus.platform.version>1.3.1.Final</quarkus.platform.version>
         <commons-codec.version>1.14</commons-codec.version>
         <awssdk.version>2.10.70</awssdk.version>
+        <cognitoidentityprovider.version>2.13.19</cognitoidentityprovider.version>
     </properties>
 
     <dependencyManagement>
@@ -108,6 +109,12 @@
             <!-- Enables @Transactional and CDI events AFTER_SUCCESS even though we don't have JPA -->
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-narayana-jta</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>cognitoidentityprovider</artifactId>
+            <version>${cognitoidentityprovider.version}</version>
         </dependency>
 
         <dependency>
