--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,6 +14,9 @@ quarkus.oidc.client-id=39334dh8ifidq5dpmnch2vnopr
 %dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_s6Ypfd935
 %dev.quarkus.oidc.client-id=5kpjjhqbnjmr5bm8bnsfjqmq13
 
+gwt.cognito.user-pool-id=eu-west-1_c5qwAzc0x
+%dev.gwt.cognito.user-pool-id=eu-west-1_s6Ypfd935
+
 gwt.dynamodb.table-suffix=
 %dev.gwt.dynamodb.table-suffix=-test
 
