--- a/server/pom.xml
+++ b/server/pom.xml
@@ -168,6 +168,7 @@
             </build>
             <properties>
                 <quarkus.package.type>native</quarkus.package.type>
+                <quarkus.native.additional-build-args>-H:ResourceConfigurationFiles=resources-config.json</quarkus.native.additional-build-args>
             </properties>
         </profile>
     </profiles>
