--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,16 @@
         <module>api</module>
         <module>gwt</module>
         <module>server</module>
+        <module>istanbul</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.tomsboardgames</groupId>
+                <artifactId>api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.tomsboardgames</groupId>
                 <artifactId>gwt</artifactId>
@@ -39,7 +45,7 @@
             </dependency>
             <dependency>
                 <groupId>com.tomsboardgames</groupId>
-                <artifactId>api</artifactId>
+                <artifactId>istanbul</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
