--- a/server/pom.xml
+++ b/server/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>gwt</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.tomsboardgames</groupId>
+            <artifactId>istanbul</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
         <dependency>
             <groupId>jakarta.websocket</groupId>
