--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <mockito.version>3.3.3</mockito.version>
         <jakarta.json-api.version>1.1.6</jakarta.json-api.version>
         <jakarta.enterprise.cdi-api.version>2.0.2</jakarta.enterprise.cdi-api.version>
+        <jakarta.json.bind-api.version>1.0.2</jakarta.json.bind-api.version>
     </properties>
 
     <modules>
@@ -60,6 +61,12 @@
                 <groupId>jakarta.json</groupId>
                 <artifactId>jakarta.json-api</artifactId>
                 <version>${jakarta.json-api.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.json.bind</groupId>
+                <artifactId>jakarta.json.bind-api</artifactId>
+                <version>${jakarta.json.bind-api.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
