--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -21,7 +21,7 @@ gwt.dynamodb.table-suffix=
 %dev.gwt.dynamodb.table-suffix=-test
 
 quarkus.http.cors=true
-quarkus.http.cors.origins=https://tomsboardgames.com,https://www.tomsboardgames.com
+quarkus.http.cors.origins=https://boardgamefiesta.com,https://www.boardgamefiesta.com
 %dev.quarkus.http.cors.origins=http://localhost:4200
 quarkus.http.cors.headers=Accept,Authorization,Content-Type
 quarkus.http.cors.methods=GET,POST
