--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,6 +3,9 @@ quarkus.log.level=INFO
 #%dev.quarkus.log.category."io.quarkus.narayana".level=TRACE
 #%dev.quarkus.log.category."com.arjuna.ats.jta".level=TRACE
 
+# Date/time format that is usable for CloudWatch
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS000} %-5p [%c{3.}] (%t) %s%e%n
+
 quarkus.dynamodb.sync-client.type=apache
 
 quarkus.oidc.roles.role-claim-path=cognito:groups
