--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -27,4 +27,4 @@ quarkus.http.cors=true
 quarkus.http.cors.origins=https://boardgamefiesta.com,https://www.boardgamefiesta.com
 %dev.quarkus.http.cors.origins=http://localhost:4200
 quarkus.http.cors.headers=Accept,Authorization,Content-Type
-quarkus.http.cors.methods=GET,POST
+quarkus.http.cors.methods=GET,POST,OPTIONS
