Send e-mail when turn based

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,6 +8,8 @@ quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p [%c{3.}] (%t) %s%e%n
 
 quarkus.dynamodb.sync-client.type=apache
 
+quarkus.ses.sync-client.type=apache
+
 quarkus.oidc.roles.role-claim-path=cognito:groups
 quarkus.oidc.authentication.scopes=openid
 
@@ -22,6 +24,13 @@ gwt.cognito.user-pool-id=eu-west-1_c5qwAzc0x
 
 gwt.dynamodb.table-suffix=
 %dev.gwt.dynamodb.table-suffix=-test
+
+bgf.url=https://boardgamefiesta.com
+bgf.from=info@boardgamefiesta.com
+%dev.bgf.url=http://localhost:4200
+
+gwt.push.privateKey=BJgqYxOkVeqrTWZryTnc3zA-VBTESLna7y-5ExPfvDe3VTMVkDTxZ58HwWbjiLFXWGvxxl8bhuSjDXAbL34z_cE
+gwt.push.publicKey=4NTjW33m8L-OeVEuw7_pyYNyVxc-pLuIInuFVt21sas
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=https://boardgamefiesta.com,https://www.boardgamefiesta.com
