--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,7 +18,7 @@
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
         <quarkus.platform.version>1.9.2.Final</quarkus.platform.version>
         <commons-codec.version>1.14</commons-codec.version>
-        <awssdk.version>2.10.70</awssdk.version>
+        <awssdk.version>2.15.68</awssdk.version>
         <cognitoidentityprovider.version>2.13.19</cognitoidentityprovider.version>
     </properties>
 
@@ -97,6 +97,10 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-amazon-dynamodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-amazon-ses</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
