--- a/server/pom.xml
+++ b/server/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>istanbul</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.boardgamefiesta</groupId>
+            <artifactId>powergrid</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
         <dependency>
             <groupId>jakarta.websocket</groupId>
