Use Cognito username as principal name, instead of 'sub', so we can migrate users to another user pool (the 'sub' changes, while username stays the same)

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,11 +10,15 @@ quarkus.dynamodb.sync-client.type=apache
 
 quarkus.ses.sync-client.type=apache
 
+quarkus.oidc.token.principal-claim=cognito:username
 quarkus.oidc.roles.role-claim-path=cognito:groups
 quarkus.oidc.authentication.scopes=openid
 
 quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_c5qwAzc0x
 quarkus.oidc.client-id=39334dh8ifidq5dpmnch2vnopr
+
+#%dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_xyGFrQowZ
+#%dev.quarkus.oidc.client-id=2sgnnfpvio4qv01bpqu98u7cul
 
 %dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_s6Ypfd935
 %dev.quarkus.oidc.client-id=5kpjjhqbnjmr5bm8bnsfjqmq13
