Add Cognito trigger lambdas

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 
     <modules>
         <module>api</module>
+        <module>cognito</module>
         <module>domain</module>
         <module>dynamodb</module>
         <module>gwt</module>
