--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,17 +14,17 @@ quarkus.oidc.token.principal-claim=cognito:username
 quarkus.oidc.roles.role-claim-path=cognito:groups
 quarkus.oidc.authentication.scopes=openid
 
+quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_c5qwAzc0x
+quarkus.oidc.client-id=39334dh8ifidq5dpmnch2vnopr
 
-quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_s6Ypfd935
-quarkus.oidc.client-id=376e8rt8oopbqs5k5h2mnvl0nl
-quarkus.oidc."old".auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_c5qwAzc0x
-quarkus.oidc."old".client-id=39334dh8ifidq5dpmnch2vnopr
+#%dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_xyGFrQowZ
+#%dev.quarkus.oidc.client-id=2sgnnfpvio4qv01bpqu98u7cul
 
-%dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_xyGFrQowZ
-%dev.quarkus.oidc.client-id=2sgnnfpvio4qv01bpqu98u7cul
+%dev.quarkus.oidc.auth-server-url=https://cognito-idp.eu-west-1.amazonaws.com/eu-west-1_s6Ypfd935
+%dev.quarkus.oidc.client-id=5kpjjhqbnjmr5bm8bnsfjqmq13
 
 gwt.cognito.user-pool-id=eu-west-1_c5qwAzc0x
-%dev.gwt.cognito.user-pool-id=eu-west-1_xyGFrQowZ
+%dev.gwt.cognito.user-pool-id=eu-west-1_s6Ypfd935
 
 gwt.dynamodb.table-suffix=
 %dev.gwt.dynamodb.table-suffix=-test
