--- a/dynamodb/pom.xml
+++ b/dynamodb/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>quarkus-junit5</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <!-- For canary test -->
+            <groupId>com.boardgamefiesta</groupId>
+            <artifactId>gwt</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
